--- a/src/GUI/PanelMultasAdmin.form
+++ b/src/GUI/PanelMultasAdmin.form
@@ -69,7 +69,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="DEVOLUCIONES"/>
+        <Property name="text" type="java.lang.String" value="MULTAS"/>
       </Properties>
     </Component>
   </SubComponents>
