--- a/src/GUI/VistaPrincipalAdmin.form
+++ b/src/GUI/VistaPrincipalAdmin.form
@@ -79,6 +79,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="MULTAS"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="MultasMouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="0" y="240" width="140" height="50"/>
